# rouletteGame

./: .gitignore  CMakeLists.txt  README.md  rouletteGame.cpp  roulettegame.cpp
include/: appGeneralMacros.h  appgeneralmacros.h  casino.h  outputmanager.h  roulette.h  rouletteplayer.h
src/: casino.cpp  outputmanager.cpp  roulette.cpp  rouletteplayer.cpp
